bson 1.6.2 is the version that works with mongoid right now.
Also removed the DMTemplate reference.

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,18 +1,10 @@
-defaults: &defaults
-  host: localhost
-  # slaves:
-  #   - host: slave1.local
-  #     port: 27018
-  #   - host: slave2.local
-  #     port: 27019
-
 development:
-  <<: *defaults
-  database: garden_dev
+  host: localhost
+  database: garden_dating_service_development
 
 test:
-  <<: *defaults
-  database: garden__test
+  host: localhost
+  database: garden_dating_service_test
 
 # set these environment variables on your prod server
 production:
@@ -21,3 +13,8 @@ production:
   username: <%= ENV['MONGOID_USERNAME'] %>
   password: <%= ENV['MONGOID_PASSWORD'] %>
   database: <%= ENV['MONGOID_DATABASE'] %>
+  # slaves:
+  #   - host: slave1.local
+  #     port: 27018
+  #   - host: slave2.local
+  #     port: 27019
