--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,10 @@
 # SQLite version 3.x
 #   gem install sqlite3
-development:
-  adapter: mongodb
-  database: db/garden_dev
-  pool: 5
-  timeout: 5000
+#development:
+#  adapter: mongodb
+#  database: db/garden_dev
+#  pool: 5
+#  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
